# intention-test-extension

.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  python-ci.yml  release.yml  vsix.yml
backend/: agents.py  configs.py  exceptions.py  generator.py  main.py  pyproject.toml  requirements.txt  server.py  session_registry.py
backend/modules/: exceptions.py  messages.py  registry.py  session.py
backend/tests/: conftest.py  test_agents.py  test_core.py  test_dataset.py  test_integration.py  test_messages.py  test_retriever.py  test_runner.py  test_server.py
src/: client.ts  extension.ts  sidebarView.ts
web/: index.html  index.js  styles.css
